--- a/config.json
+++ b/config.json
@@ -1,11 +1,24 @@
 {
     "DESIGN_NAME": "mul",
     "VERILOG_FILES": "rtl/mul.sv",
+
     "CLOCK_PERIOD": 10,
     "CLOCK_PORT": "CLK",
+
+    "VDD_NETS": ["VPWR"],
+    "GND_NETS": ["VGND"],
+
+    "NETGEN_SETUP_FILE": "/foss/pdks/sky130A/libs.tech/netgen/sky130A_setup.tcl",
+    "LVS_EXTRA_SPICE": [
+  "/foss/pdks/sky130A/libs.ref/sky130_fd_sc_hd/spice/sky130_fd_sc_hd.spice",
+  "/foss/pdks/sky130A/libs.ref/sky130_ef_sc_hd/spice/sky130_ef_sc_hd.spice"
+],
+
+
     "FP_PDN_VOFFSET": 7,
     "FP_PDN_HOFFSET": 7,
     "FP_PDN_SKIPTRIM": true,
+
     "RUN_POST_GRT_RESIZER_TIMING": true,
     "RUN_POST_GRT_DESIGN_REPAIR": true,
     "SYNTH_AUTONAME": true
